--- a/app/assets/styl/main.styl
+++ b/app/assets/styl/main.styl
@@ -5,7 +5,7 @@ reset-html5()
 
 // Defaults
 font-main = sans-serif
-height = 22px
+height = 26px
 
 html, body
 	font: 14px font-main
@@ -15,11 +15,42 @@ html, body
 	text-shadow: 0 1px 0 rgba(#000, .8)
 	overflow: hidden
 
+#statusline-bg
+	width = 1920px
+	height = height
+	blur = 2px
+
+	position: absolute
+	background: url("/home/kim/bg.jpg") blur blur
+
+	top: -(blur)
+	left: -(blur)
+
+	width: width + (blur * 2)
+	height: height + (blur * 4)
+	-webkit-filter: blur(blur) grayscale(100%)
+
+	z-index: 10
+
+	&:after
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		content: ''
+		background: linear-gradient(top, rgba(#000, .4), rgba(#000, .8))
+
 #statusline
-	height: height
+	position: relative
+	z-index: 11
+
+	height: height - 1px
 	line-height: height
-	background: linear-gradient(top, #444, #222)
+	//background: linear-gradient(top, #444, #222)
 	color: #fff
+
+	border-bottom: 1px solid rgba(#000, .5)
 
 	div, ul, li
 		display: inline-block
