--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -11,6 +11,7 @@ html(lang='no')
 		link(rel='stylesheet', href='static/css/main.css', type='text/css')
 
 	body
+		#statusline-bg
 		#statusline
 			#left
 				ul#tags
