--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -31,6 +31,20 @@ html(lang='no')
 						i.fa.fa-times-circle.icon
 						| Error notification
 						i.fa.fa-times.close
+
+				#player
+					i.fa.fa-fast-backward
+					i.fa.fa-pause
+					i.fa.fa-fast-forward
+					.time
+						span.current 2:20
+						span.end 4:40
+					.progress
+						.bar(style='width:50%')
+					.song
+						span.artist Artist
+						span.title Very long trimmed title
+
 				#volume
 					i.fa.fa-volume-down
 					.progress
