--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,5 +1,5 @@
 !!!5
-html(lang='no')
+html(ng-app='Wkline')
 	head
 		meta(charset='utf-8')
 		meta(http-equiv='Content-Type', content='text/html;charset=utf-8')
@@ -12,7 +12,7 @@ html(lang='no')
 
 	body
 		#statusline-bg
-		#statusline
+		#statusline(ng-controller='WklineCtrl')
 			#left
 				ul#tags
 					li 1
@@ -20,6 +20,8 @@ html(lang='no')
 					li
 						| 3
 						span.windows
+
+				div(ng-bind='data.placeholder') Waiting for page to load...
 
 			#right
 				ul#notification
@@ -55,3 +57,6 @@ html(lang='no')
 				#time
 					i.fa.fa-clock-o
 					| 19:55
+
+	script(src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js')
+	script(src='static/js/main.js')
